[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/spawners/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="SpawnPosition1" type="Position2D" parent="."]
position = Vector2( 169.09, 146.728 )

[node name="SpawnPosition2" type="Position2D" parent="."]
position = Vector2( -144.575, 132.378 )

[node name="SpawnPosition3" type="Position2D" parent="."]
position = Vector2( 153.783, -143.38 )

[node name="SpawnPosition4" type="Position2D" parent="."]
position = Vector2( -146.847, -135.726 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
